--- a/Sachy/src/main/java/tym6/sachy/Okno.form
+++ b/Sachy/src/main/java/tym6/sachy/Okno.form
@@ -70,6 +70,11 @@
       </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
+      <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[3276, 3276]"/>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
